# secret-key-manager

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: README.md
examples/custom_provider/: README.md  __init__.py
src/secret_key_manager/: cli.py  core.py  protocol.py
src/secret_key_manager/providers/: __init__.py  dotenv.py  file.py  keyring_provider.py  lastpass.py  onepassword.py
tests/: README.md  conftest.py  pyproject.toml  test_core.py  test_providers.py
tests/docs/: README.md
tests/examples/: usage.py
tests/examples/custom_provider/: provider.py  setup.py
tests/src/secret_key_manager/: __init__.py  cli.py  core.py  protocol.py
tests/src/secret_key_manager/providers/: __init__.py  env.py  file.py  keyring_provider.py  vault.py
